# Yuime

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  todo.md
Sudado/: todo.md
docs/: __dynamic__array_8h.html  __dynamic__array_8h.js  __dynamic__array_8h__incl.md5  __dynamic__array_8h_source.html  _a_p_i_8h.html  _a_p_i_8h.js  _a_p_i_8h__dep__incl.md5  _a_p_i_8h_source.html  _r_e_a_d_m_e_8md.html  alloc_8h.html  alloc_8h.js  alloc_8h__dep__incl.md5  alloc_8h__incl.md5  alloc_8h_source.html  annotated.html  annotated_dup.js  border_8h.html  border_8h.js  border_8h__dep__incl.md5  border_8h__incl.md5  border_8h_source.html  classes.html  color_8h.html  color_8h.js  color_8h__dep__incl.md5  color_8h__incl.md5  color_8h_source.html  command_8h.html  command_8h.js  command_8h__dep__incl.md5  command_8h__incl.md5  command_8h_source.html  context_8h.html  context_8h.js  context_8h__dep__incl.md5  context_8h__incl.md5  context_8h_source.html  dimension2_8h.html  dimension2_8h.js  dimension2_8h__dep__incl.md5  (+158 more)
docs/search/: all_1.js  all_11.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_9.js  files_a.js  files_d.js  functions_0.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_10.js  variables_12.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  (+7 more)
doxygen/: Doxyfile
doxygen/doxygen-custom/: header.html
examples/: CMakeLists.txt
examples/basic_interface/src/: main.c
examples/shared/src/: event_handler.c  event_handler.h  init.c  init.h  mem_alloc.c  mem_alloc.h  render.c  render.h
examples/shared/src/renderers/: sdl.c  sdl.h
include/: sda.h
include/yuime/: API.h  _dynamic_array.h  alloc.h  color.h  context.h  dimension2.h  element.h  event.h  events.h  geometry.h  macros.h  node.h  rect.h  render.h  resize_region.h  style.h  util.h  vector2.h  yuime.h
include/yuime/base/: alloc.h  context.h  dimension2.h  element.h  element_array.h  element_pointer_array.h  event.h  geometry.h  render.h  resize_region.h
include/yuime/base/element/: array.h  element.h  pointer_array.h
include/yuime/base/math/: dimension2.h  geometry.h  rect.h
include/yuime/elements/: button.h  type.h
include/yuime/math/: dimension2.h  geometry.h  vector2.h
include/yuime/render/: command.h  rectangle.h  render.h
include/yuime/style/: border.h  color.h
include/yuime/widget/: events.h  panel.h  type.h  widget.h
src/: context.c  element.c  event.c  events.c  node.c  render.c  util.c  yuime.c
src/base/: context.c  element.c  element_array.c  element_pointer_array.c  event.c
src/elements/: button.c  type.c
src/render/: command.c  render.c
src/widget/: events.c  panel.c
